Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    UINT32 ctrlflags;           //User writes message configuration options
    UINT16 flag1;               //Card writes message flag 1
    UINT16 flag2;               //Card writes message flag 2
    UINT16 errflags;            //Card writes error flags
    UINT16 actflags;            //Card writes activity flags
    UINT16 resptime;            //Card writes response time
    UINT16 resv7;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    UINT32 timetag;             //Card writes time tag
    UINT32 elapsetime;          //Card writes elapsed time
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //User writes command word
	UINT16 cwdinfo;				//User writes command word info
	UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;				//Card writes status word info
    UINT16 data[32];            //User writes data words
    UINT16 extra[8];            //User writes extra words
} XMITFIELDSEBR;
typedef XMITFIELDSEBR * LPXMITFIELDSEBR;
typedef struct
{
    UINT16 msgflag;             //Driver writes message flags
    UINT16 msgopt;              //Driver writes message options
    UINT16 msgerr;              //Card writes message errors
    UINT16 msgact;              //Card writes message activity
    UINT16 resptime;            //Card writes response time
    UINT16 resv5;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    union {
        UINT32 timetag;         //Card writes time tag
        UINT32 hitcount;        //Card writes hit count
    };
    union {
        UINT32 elapsetime;      //Card writes elapsed time
        UINT32 mintime;         //Card writes min time
        UINT32 maxtime;         //Card writes max time
    };
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //Card/User writes command word (R/T)
	UINT16 cwdinfo;				//Card/User writes command word info
    UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;		    	//Card writes status word info
    UINT16 data[32];            //User/Card writes data words (R/T)
    UINT16 extra[8];            //User/Card writes extra words (R/T)
} MSGFIELDSEBR;
typedef MSGFIELDSEBR * LPMSGFIELDSEBR;
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonFilterRTLink(UINT32 rtlinkmask,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MonFilterSA(INT32 rtlink,UINT32 rcvsamask,UINT32 xmtsamask,UINT32 rcvmcmask,UINT32 xmtmcmask,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgBlockRd(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_MsgBlockWr(LPMSGFIELDSEBR buf,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgDataRd(LPUINT16 buf,INT32 count,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgDataWr(LPUINT16 buf,INT32 count,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_MsgFieldRd(UINT16 fieldtype,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_MsgFieldWr(UINT32 fieldval,UINT16 fieldtype,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgGroupRd(INT32 nummsgs,LPMSGFIELDSEBR msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgGroupWr(INT32 nummsgs,LPMSGFIELDSEBR msgflds,LPMSGADDR msgaddrptr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_MsgSkipRd(MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_MsgSkipWr(BOOL skip,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MsgSyncDefine(BOOL enableflag,UINT16 syncmask,UINT16 pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_MsgTriggerDefine(BOOL enableflag,UINT16 trigmask,UINT16 trigval,UINT16 pinpolarity,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_PlayConfig(UINT32 configval,UINT32 rtlinkmask,INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_PlayStatus(INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_PlayWr(LPUINT16 buf,UINT16 bufcount,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTConfig(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_RTCreateList(UINT32 listconfigval,INT32 count,UINT32 msgconfigval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_RTCreateMsg(UINT32 configval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_RTGetMsg(BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTReset(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTResponseTimeSet(INT32 resptime,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSetMode(UINT32 configval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_RTSWDRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSWDWr(UINT16 swdval,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_RTSyncDefine(BOOL enableflag,UINT16 syncmask,UINT16 pinpolarity,INT32 rtlink,UINT32 rcvsamask,UINT32 xmtsamask,UINT32 rcvmcmask,UINT32 xmtmcmask,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_ValPackCWD(INT32 TAval,INT32 TRflag,INT32 SAval,INT32 WCval);
BTIEBRAPI VOID __stdcall BTIEBR_ValUnpackCWD(UINT16 CWDval,LPINT32 TAval,LPINT32 TRflag,LPINT32 SAval,LPINT32 WCval);
/**
*
*  Internal functions used by the BTIEBR Driver.
*
**/

BTIEBRAPI LISTADDR __stdcall BTIEBR_BCCreateListEx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_BCCreateListExx(UINT32 listconfigval,INT32 skipval,INT32 count,UINT32 msgconfigval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_BCGetMsg(INT32 index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCIMGapRd(LPUINT16 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCIMGapWr(UINT16 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedBranchEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedCallEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedLogEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 opcode,UINT16 tagval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedNop(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedRetryEx(UINT16 condition1,UINT16 condition2,UINT16 condition3,UINT16 retryflag,UINT16 retries,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedUser(UINT32 useraddr,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSetEntry(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkEx(BOOL writeflag,INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkInit(INT32 maxcount,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkRd(INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsgBlkWr(INT32 count,LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkAddr(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkOptRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkOptWr(UINT16 rtopt,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_BlkPtrRd(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_BlkPtrWr(UINT32 descaddr,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkRd(LPUINT16 block,INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BlkReset(INT32 rtlink,INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_BlkSWDRd(INT32 rtlink,INT32 channum,HCORE handleval);