Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTIEBRNET.VB

        Public Declare Function BTIEBR_MonFilterRTLink Lib "BTIEBR64.DLL" Alias "BTIEBR_MonFilterRTLink" (ByVal rtlinkmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MonFilterSA Lib "BTIEBR64.DLL" Alias "BTIEBR_MonFilterSA" (ByVal rtlink As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgBlockRd Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgBlockRd" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgBlockWr Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgBlockWr" (ByRef buf As MSGFIELDSEBR, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_MsgDataRd Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgDataRd" (ByVal buf As UInt16(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_MsgDataWr Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgDataWr" (ByVal buf As UInt16(), ByVal count As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgFieldRd Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgFieldRd" (ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_MsgFieldWr Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgFieldWr" (ByVal fieldval As UInt32, ByVal fieldtype As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_MsgGroupRd Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgGroupRd" (ByVal nummsgs As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal msgflds As MSGFIELDSEBR(), ByVal msgaddrptr As UInt32(), ByVal handleval As IntPtr)
        Public Declare Sub BTIEBR_MsgGroupWr Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgGroupWr" (ByVal nummsgs As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal msgflds As MSGFIELDSEBR(), ByVal msgaddrptr As UInt32(), ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgSkipRd Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgSkipRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTIEBR_MsgSkipWr Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgSkipWr" (ByVal skip As Int32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_MsgSyncDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_MsgTriggerDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_MsgTriggerDefine" (ByVal enableflag As Int32, ByVal trigmask As UInt16, ByVal trigval As UInt16, ByVal pinpolarity As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_PlayConfig" (ByVal configval As UInt32, ByVal rtlinkmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayStatus Lib "BTIEBR64.DLL" Alias "BTIEBR_PlayStatus" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_PlayWr Lib "BTIEBR64.DLL" Alias "BTIEBR_PlayWr" (ByVal buf As UInt16(), ByVal bufcount As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_RTConfig Lib "BTIEBR64.DLL" Alias "BTIEBR_RTConfig" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTCreateList Lib "BTIEBR64.DLL" Alias "BTIEBR_RTCreateList" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTCreateMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_RTCreateMsg" (ByVal configval As UInt32, ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTGetMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_RTGetMsg" (ByVal mcflag As Int32, ByVal rtlink As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_RTReset Lib "BTIEBR64.DLL" Alias "BTIEBR_RTReset" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTResponseTimeSet Lib "BTIEBR64.DLL" Alias "BTIEBR_RTResponseTimeSet" (ByVal resptime As Int32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSetMode Lib "BTIEBR64.DLL" Alias "BTIEBR_RTSetMode" (ByVal configval As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSWDRd Lib "BTIEBR64.DLL" Alias "BTIEBR_RTSWDRd" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_RTSWDWr Lib "BTIEBR64.DLL" Alias "BTIEBR_RTSWDWr" (ByVal swdval As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_RTSyncDefine Lib "BTIEBR64.DLL" Alias "BTIEBR_RTSyncDefine" (ByVal enableflag As Int32, ByVal syncmask As UInt16, ByVal pinpolarity As UInt16, ByVal rtlink As Int32, ByVal rcvsamask As UInt32, ByVal xmtsamask As UInt32, ByVal rcvmcmask As UInt32, ByVal xmtmcmask As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_ValPackCWD Lib "BTIEBR64.DLL" Alias "BTIEBR_ValPackCWD" (ByVal taval As Int32, ByVal trflag As Int32, ByVal saval As Int32, ByVal wcval As Int32) As UInt16
        Public Declare Sub BTIEBR_ValUnpackCWD Lib "BTIEBR64.DLL" Alias "BTIEBR_ValUnpackCWD" (ByVal cwdval As UInt16, ByRef taval As Int32, ByRef trflag As Int32, ByRef saval As Int32, ByRef wcval As Int32)
        Public Declare Function BTIEBR_BCCreateListEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCCreateListEx" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCCreateListExx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCCreateListExx" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd As UInt16, ByVal data As UInt16(), ByVal rtlink As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCGetMsg Lib "BTIEBR64.DLL" Alias "BTIEBR_BCGetMsg" (ByVal index As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTIEBR_BCIMGapRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BCIMGapRd" (ByRef gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCIMGapWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BCIMGapWr" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedBranchEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedBranchEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedCallEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedCallEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal destindex As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedLogEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedLogEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal opcode As UInt16, ByVal tagval As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedNop Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedNop" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedRetryEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedRetryEx" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal retryflag As UInt16, ByVal retries As UInt16, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSchedUser Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSchedUser" (ByVal useraddr As UInt32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCSetEntry Lib "BTIEBR64.DLL" Alias "BTIEBR_BCSetEntry" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkEx Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTransmitMsgBlkEx" (ByVal writeflag As Int32, ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=1)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkInit Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTransmitMsgBlkInit" (ByVal maxcount As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTransmitMsgBlkRd" (ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BCTransmitMsgBlkWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BCTransmitMsgBlkWr" (ByVal count As Int32, <[In](), Out(), MarshalAs(UnmanagedType.LPArray, SizeParamIndex:=0)> ByVal xmitfieldsval As XMITFIELDSEBR(), ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkAddr Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkAddr" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_BlkOptRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkOptRd" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTIEBR_BlkOptWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkOptWr" (ByVal rtopt As UInt16, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkPtrRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkPtrRd" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTIEBR_BlkPtrWr Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkPtrWr" (ByVal descaddr As UInt32, ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr)
        Public Declare Function BTIEBR_BlkRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkRd" (ByVal block As UInt16(), ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkReset Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkReset" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTIEBR_BlkSWDRd Lib "BTIEBR64.DLL" Alias "BTIEBR_BlkSWDRd" (ByVal rtlink As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As UInt16
